k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: personal-website
  name: personal-website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: personal-website
  template:
    metadata:
      labels:
        app: personal-website
    spec:
      containers:
      # placeholders are substituted in deployment workflow
      - image: europe-north1-docker.pkg.dev/<GCP_PROJECT_ID>/personal-repo/gardberg/personal-website:<NEW_IMAGE_TAG>
        name: personal-website
