k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: personal-website
  name: personal-website-service
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"labels":{"app":"personal-website"},"name":"personal-website-service"},"spec":{"ports":[{"port":80,"protocol":"TCP","targetPort":3000}],"selector":{"app":"personal-website"},"type":"LoadBalancer"}}
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: personal-website
  type: LoadBalancer
